--- a/index.html
+++ b/index.html
@@ -545,6 +545,12 @@
 									><p class="text-muted">+92 325-0688883</p></a
 								>
 							</div>
+							<div class="text ms-3">
+								<h3 class="fs-5">Phone</h3>
+								<a href="tel:+923019400665" style="text-decoration: none"
+									><p class="text-muted">+92 316-4635609</p></a
+								>
+							</div>
 						</div>
 					</div>
 
